# SCIT-CMS

./: CMakeLists.txt  adminmenu.cpp  adminmenu.h  database.cpp  database.h  facultymenu.cpp  facultymenu.h  mainwindow.cpp  mainwindow.h  studentmenu.cpp  studentmenu.h
